--- a/docs/contributing/setting-up-project.mdx
+++ b/docs/contributing/setting-up-project.mdx
@@ -2,28 +2,94 @@
 title: Setup Guide
 ---
 
-#### 1. Automated dependency installation
+## 1. Automated dependency installation
 Installing all the dependencies
 ```bash
  make deps
 ```
 
-#### 2. Build
-To build and rebuild after changes to Rust files
+## 2. Build
 
-Note: Make sure you have rust compiler installed. This package requires Rust and Cargo to compile extensions.
+To build and rebuild after changes to Rust files.
+
+> **Note:** Make sure you have the Rust compiler installed. This package requires Rust and Cargo to compile extensions.
+
+### Step 1: Create and Activate a Virtual Environment
+
+Before running `make install`, it's recommended to create and activate a Python virtual environment.
+
+#### macOS & Linux:
+
 ```bash
- make install
+python3 -m venv venv
+source venv/bin/activate
 ```
 
-#### 3. Test
+#### Windows (PowerShell):
+
+```powershell
+python -m venv venv
+venv\Scripts\Activate
+```
+
+### Step 2: Install Dependencies
+
+```bash
+make install
+```
+
+### Troubleshooting
+
+#### Issue: `python: command not found`
+
+On some systems, the `make install` command may fail with an error stating that the `python` command is not found. This happens because some systems only provide `python3` and do not include a `python` symlink.
+
+#### macOS Fix:
+If you're on macOS, create a symbolic link for `python` pointing to `python3`:
+
+```bash
+sudo ln -s $(which python3) /usr/local/bin/python
+```
+
+#### Linux Fix:
+On Linux, you may need to install the `python-is-python3` package or create a symlink manually:
+
+```bash
+sudo apt install python-is-python3  # For Debian/Ubuntu
+```
+Or manually create a symlink:
+
+```bash
+sudo ln -s $(which python3) /usr/bin/python
+```
+
+#### Windows Fix:
+On Windows, ensure Python is installed and added to your `PATH`. You can check by running:
+
+```powershell
+python --version
+```
+
+If `python` is not recognized, use the `python3` command instead, or create an alias in PowerShell:
+
+```powershell
+Set-Alias -Name python -Value python3
+```
+
+After applying the appropriate fix, retry:
+
+```bash
+make install
+```
+
+## 3. Test
 
 Tach internally uses `pytest` module for testing all the files within `python/tests/`
 ```bash
 make test
 ```
 
-#### 4. Setting up the docs
+## 4. Setting up the docs
 Tach internally uses `mintlify` platform to create and maintain public facing documentation
 
 Note: contributors would need to install [Node](https://nodejs.org/en/download/prebuilt-installer) and [npm](https://www.npmjs.com/)
@@ -31,7 +97,7 @@ Note: contributors would need to install [Node](https://nodejs.org/en/download/p
 make docs
 ```
 
-### 8. Things to check before committing
+## 5. Things to check before committing
 Check and sync your dependencies in the root folder
 ```bash
 tach check
@@ -59,4 +125,3 @@ Find Beginner Friendly issues here:
 - [Documentation](https://github.com/gauge-sh/tach/tree/main/docs)
 
 For any questions, just drop a message in [Discord](https://discord.com/invite/a58vW8dnmw)
-
