--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -31,6 +31,7 @@ Tach is:
 - [`tach check`](../usage/commands#tach-check) - Check that boundaries and interfaces are respected.
 - [`tach sync`](../usage/commands#tach-sync) - Sync constraints with the actual dependencies in your project.
 - [`tach show`](../usage/commands#tach-show) - Visualize your project's dependency graph.
+- [`tach check-external`](../usage/commands#tach-check-external) - Check 3rd party imports match dependencies in your packages.
 - [`tach report`](../usage/commands#tach-report) - Generate a dependency report for a file or module.
 - [`tach test`](../usage/commands#tach-test) - Run only the tests impacted by your changes
 - [`tach install`](../usage/commands#tach-install) - Install Tach into your development workflow (e.g. pre-commit)
