--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -113,15 +113,13 @@ unused_ignore_directives = "warn"
 Each module listed under the `modules` key above can accept the following attributes:
 
 - `path` the Python import path to the module (e.g. `a.b` for `<root>/a/b.py`)
-<Note>
-  A module can also define `paths` as a shorthand for multiple module definitions.
-  This allows specifying allowed dependencies and other attributes as a group.
-
-  Example: `paths = ["a.b", "a.c"]`
-</Note>
-- `depends_on` a list of the other modules which this module can import from
-
+<Note>Glob patterns are allowed. The pattern `"libs.**"` would define the default configuration for any module under the `libs` namespace.<br/><br/>This can be overridden for specific modules by defining them later in the file using a concrete pattern like `"libs.module"`.</Note>
+<Note>A module can also define `paths` as a shorthand for multiple module definitions. This allows specifying allowed dependencies and other attributes as a group.<br></br><br></br>Example: `paths = ["a.b", "a.c"]`</Note>
+- `depends_on` a list of module paths which this module can import from
+<Note>Glob patterns are allowed. The pattern `"libs.**"` would allow dependencies on any module under the `libs` namespace.</Note>
 <Note>Omitting the `depends_on` field means the module will be allowed to import from any other module. However, it will still be subject to those modules' [public interfaces](#interfaces).</Note>
+- `cannot_depend_on` a list of module paths which this module cannot import from
+<Note>This takes precedence over `depends_on`. In other words, if `cannot_depend_on = ["module"]`, then `depends_on = ["module"]` will have no effect.</Note>
 - `layer` (default: `null`) the [**layer**](#layers) which holds this module
 - `visibility` (default: `['*']`) a list of other modules which can import from this module
 - `utility` (default: `false`) marks this module as a **Utility**, meaning all other modules may import from it without declaring an explicit dependency
