Add new interface features to docs

--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -120,8 +120,8 @@ Each module listed under the `modules` key above can accept the following attrib
 <Note>Omitting the `depends_on` field means the module will be allowed to import from any other module. However, it will still be subject to those modules' [public interfaces](#interfaces).</Note>
 - `cannot_depend_on` a list of module paths which this module cannot import from
 <Note>This takes precedence over `depends_on`. In other words, if `cannot_depend_on = ["module"]`, then `depends_on = ["module"]` will have no effect.</Note>
-- `layer` (default: `null`) the [**layer**](#layers) which holds this module
-- `visibility` (default: `['*']`) a list of other modules which can import from this module
+- `layer` (optional) the [**layer**](#layers) which holds this module
+- `visibility` (optional) a list of other modules which can import from this module
 - `utility` (default: `false`) marks this module as a **Utility**, meaning all other modules may import from it without declaring an explicit dependency
 - `unchecked` (default: `false`) marks this module as [**unchecked**](../usage/unchecked-modules), meaning Tach will not check its imports
 
@@ -145,6 +145,8 @@ More specifically:
 
 - `expose`: a list of regex patterns which define the public interface
 - `from` (optional): a list of regex patterns which define the modules which adopt this interface
+- `visibility` (optional): a list of modules which can use this interface
+- `exclusive` (default: `false`): when paired with `visibility`, requires that matching modules use _only_ this interface
 
 [More details here.](../usage/interfaces)
 
