Documentation for 'respect_gitignore' flag

--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -26,6 +26,8 @@ This is the project-level configuration file which should be in the root of your
 
 `forbid_circular_dependencies` (default: **false**) is a flag which causes `tach check` to fail if any circular dependencies are detected.
 
+`respect_gitignore` (default: **true**) is a flag which causes Tach to exclude files and directories matched by `.gitignore`.
+
 `root_module` takes a string enum value, and determines how Tach treats code which lives within the project but is not covered by an explicit module. This is described in detail [below](#the_root_module)
 
 `rules` allows precise configuration of the severity of certain types of issues. See [below](#rules) for more details.
