Update documentation about tach map

--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -29,9 +29,10 @@ Tach is:
 
 - [`tach mod`](../usage/commands#tach-mod) - Interactively define module boundaries.
 - [`tach check`](../usage/commands#tach-check) - Check that boundaries and interfaces are respected.
+- [`tach check-external`](../usage/commands#tach-check-external) - Check 3rd party imports match dependencies in your packages.
 - [`tach sync`](../usage/commands#tach-sync) - Sync constraints with the actual dependencies in your project.
 - [`tach show`](../usage/commands#tach-show) - Visualize your project's dependency graph.
-- [`tach check-external`](../usage/commands#tach-check-external) - Check 3rd party imports match dependencies in your packages.
+- [`tach map`](../usage/commands#tach-map) - Generate a JSON dependency map between files in your codebase.
 - [`tach report`](../usage/commands#tach-report) - Generate a dependency report for a file or module.
 - [`tach test`](../usage/commands#tach-test) - Run only the tests impacted by your changes
 - [`tach install`](../usage/commands#tach-install) - Install Tach into your development workflow (e.g. pre-commit)
